[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build-meta"

[project]
name = "crisissimenv"
version = "0.1.0"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn==0.27.0",
    "pydantic==2.6.0",
    "openai==1.12.0",
    "openenv>=0.1.13"
]

[project.scripts]
server = "app:main"
