[project]
name = "crisissimenv"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "openai",
    "pydantic",
    "openenv>=0.1.13"
]

[project.scripts]
server = "app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
